Fix issue with OSD not showing for hop images RAZU

--- a/src/app/components/node/node-images/node-images.component.scss
+++ b/src/app/components/node/node-images/node-images.component.scss
@@ -1,3 +1,7 @@
-.viewer-small-ui .openseadragon-container img {
-  height: 25px;
+.viewer-small-ui {
+  height: 6rem;
+
+  & .openseadragon-container img {
+    height: 25px;
+  }
 }
